Checks if server is running via port.

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@electron-forge/plugin-fuses": "^7.4.0",
     "@electron-forge/plugin-vite": "^7.4.0",
     "@electron/fuses": "^1.8.0",
+    "@types/adm-zip": "^0.5.5",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "electron": "31.3.1",
@@ -37,6 +38,8 @@
   },
   "license": "MIT",
   "dependencies": {
+    "adm-zip": "^0.5.15",
+    "axios": "^1.7.3",
     "electron-squirrel-startup": "^1.0.1"
   }
 }
