Add description fields.

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "comfyui-electron",
-  "productName": "comfyui-electron",
+  "productName": "ComfyUI",
   "version": "1.0.0",
-  "description": "My Electron application description",
+  "description": "The best modular GUI to run AI diffusion models.",
   "main": ".vite/build/main.js",
   "scripts": {
     "start": "electron-forge start",
@@ -34,9 +34,9 @@
   "keywords": [],
   "author": {
     "name": "Robin Huang",
-    "email": "robin.j.huang@gmail.com"
+    "email": "robin@drip.art"
   },
-  "license": "MIT",
+  "license": "GPL",
   "dependencies": {
     "adm-zip": "^0.5.15",
     "axios": "^1.7.3",
