--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
-    "lint": "eslint --ext .ts,.tsx ."
+    "lint": "eslint --ext .ts,.tsx .",
+    "notarize": "node debug/notarize.js",
+    "sign": "node debug/sign.js"
   },
   "devDependencies": {
     "@electron-forge/cli": "^7.4.0",
@@ -20,6 +22,7 @@
     "@electron-forge/plugin-auto-unpack-natives": "^7.4.0",
     "@electron-forge/plugin-fuses": "^7.4.0",
     "@electron-forge/plugin-vite": "^7.4.0",
+    "@electron-forge/publisher-github": "^7.4.0",
     "@electron/fuses": "^1.8.0",
     "@types/adm-zip": "^0.5.5",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
@@ -38,6 +41,7 @@
   },
   "license": "GPL",
   "dependencies": {
+    "@electron/notarize": "^2.4.0",
     "adm-zip": "^0.5.15",
     "axios": "^1.7.3",
     "electron-squirrel-startup": "^1.0.1"
