--- a/.github/workflows/publish_macos.yml
+++ b/.github/workflows/publish_macos.yml
@@ -13,6 +13,8 @@ jobs:
     steps:
       - name: Github checkout
         uses: actions/checkout@v4
+      - name: Output xcode version
+        run: xcodebuild -version
       - name: Add MacOS certs
         run: chmod +x add-osx-cert.sh && ./add-osx-cert.sh
         env:
