--- a/.github/workflows/publish_macos.yml
+++ b/.github/workflows/publish_macos.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Output xcode version
         run: xcodebuild -version
       - name: Add MacOS certs
-        run: chmod +x add-osx-cert.sh && ./add-osx-cert.sh
+        run: cd scripts && chmod +x add-osx-cert.sh && ./add-osx-cert.sh
         env:
           CERTIFICATE_OSX_APPLICATION: ${{ secrets.CERTIFICATE_OSX_APPLICATION }}
           CERTIFICATE_PASSWORD: ${{ secrets.CERTIFICATE_PASSWORD }}
