--- a/.github/workflows/publish_macos.yml
+++ b/.github/workflows/publish_macos.yml
@@ -27,7 +27,7 @@ jobs:
           curl -L -o comfyui-mac.tar.gz https://github.com/Comfy-Org/python-dependencies/releases/download/mac-arm-deps-py3.12-2024-08-14-200858/mac_arm_python_env.tar.gz
           tar -xzvf comfyui-mac.tar.gz
           rm -rf ComfyUI
-          mv assets/UI/ComfyUIBackend .
+          mv dist/ComfyUI ./assets/UI/ComfyUIBackend
           rm -rf comfyui-mac.tar.gz
       - name: Publish app
         env:
