Fix linux build (#4)
* minor fixups to fields in package.json

* add missing `@types/*` packages

* update to latest yarn

* update yarn.lock to match updated yarn, remove redundant package-lock.json

* refactor all uses of `require` => `import`

* fix typo

* fix rpm/deb build for linux

* use better fix for rpm/deb build on linux

* add some build/yarn/vscode stuff to .gitignore

* add `yarn clean` and `yarn clean:slate` commands

* add basic README

* add lint:fix command to package.json

--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ typings/
 
 # TypeScript cache
 *.tsbuildinfo
+dist
 
 # Optional npm cache directory
 .npm
@@ -56,6 +57,9 @@ typings/
 
 # Yarn Integrity file
 .yarn-integrity
+
+# Yarn cache files
+.yarn
 
 # dotenv environment variables file
 .env
@@ -95,6 +99,10 @@ out/
 comfyui-prebuilt
 comfyui
 
+# vscode
+*.code-workspace
+.history
 .vscode/*
+
 assets/ComfyUI
 assets/python
