--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
   "version": "0.0.3",
   "description": "The best modular GUI to run AI diffusion models.",
   "main": ".vite/build/main.js",
+  "packageManager": "yarn@4.4.1",
+  "type": "commonjs",
   "scripts": {
-    "start": "electron-forge start",
-    "package": "electron-forge package",
-    "make": "electron-forge make",
-    "publish": "electron-forge publish",
+    "clean": "rimraf .vite dist out",
+    "clean:slate": "yarn run clean && rimraf node_modules",
     "lint": "eslint --ext .ts,.tsx .",
+    "lint:fix": "eslint --fix --ext .ts,.tsx .",
+    "make": "electron-forge make",
     "notarize": "node debug/notarize.js",
-    "sign": "node debug/sign.js"
+    "package": "electron-forge package",
+    "publish": "electron-forge publish",
+    "sign": "node debug/sign.js",
+    "start": "electron-forge start"
   },
   "devDependencies": {
     "@electron-forge/cli": "^7.4.0",
@@ -27,6 +32,8 @@
     "@electron/notarize": "^2.4.0",
     "@electron/windows-sign": "^1.1.3",
     "@types/adm-zip": "^0.5.5",
+    "@types/electron-squirrel-startup": "^1.0.2",
+    "@types/node": "^22.5.0",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
@@ -34,6 +41,7 @@
     "electron": "31.3.1",
     "eslint": "^8.0.1",
     "eslint-plugin-import": "^2.25.0",
+    "rimraf": "^6.0.1",
     "ts-node": "^10.0.0",
     "typescript": "~4.5.4",
     "vite": "^5.0.12"
@@ -43,7 +51,7 @@
     "name": "Robin Huang",
     "email": "robin@drip.art"
   },
-  "license": "GPL",
+  "license": "GPL-3.0-only",
   "dependencies": {
     "adm-zip": "^0.5.15",
     "axios": "^1.7.3",
