--- a/.github/workflows/publish_macos.yml
+++ b/.github/workflows/publish_macos.yml
@@ -22,18 +22,26 @@ jobs:
         with:
           node-version: 20
       - run: npm i
-      - name: Download and prepare ComfyUI
+      - name: Make Comfy
+          uses: ./.github/actions/build/macos/comfy
+      - run: |
+          SIGN_ID=$(security find-identity -p codesigning -v | grep -E "Developer ID" | sed -n -e 's/.* "/"/p' | tr -d '""')
+          echo "SIGN_ID=$SIGN_ID" >> $GITHUB_ENV
+          sed -i '' 's/packageOpts.quiet = true/packageOpts.quiet = false/g' "node_modules/@electron-forge/core/dist/api/package.js"
+      - name: Sign Wheels
+        uses: ./.github/actions/build/macos/signwheel
+      - name: shim
         run: |
-          curl -L -o comfyui-mac.tar.gz https://github.com/Comfy-Org/python-dependencies/releases/download/mac-arm-deps-py3.12-2024-08-16-050751/mac_arm_python_env.tar.gz
-          tar -xzvf comfyui-mac.tar.gz
-          rm -rf ComfyUI
-          mv dist/ComfyUI ./assets/UI/ComfyUIBackend
-          rm -rf comfyui-mac.tar.gz
+          chmod +x scripts/shim.sh && ./scripts/shim.sh
       - name: Publish app
         env:
-          DEBUG: electron-forge:*
+          DEBUG: electron-osx-sign*
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SIGN_ID: ${{env.SIGN_ID}}
           APPLE_ID: ${{ secrets.APPLE_ID }}
           APPLE_PASSWORD: ${{ secrets.APPLE_PASSWORD }}
           APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
-        run: npm run publish -- --arch="x64","arm64"
+        run: npm run publish -- --arch="arm64"
+      - name: Check Notarization
+        run: |
+          spctl -a -vvv -t install "out/ComfyUI-darwin-arm64/ComfyUI.app"
