--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@electron/notarize": "^2.4.0",
     "@electron/windows-sign": "^1.1.3",
     "@types/adm-zip": "^0.5.5",
+    "@types/electron-squirrel-startup": "^1.0.2",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
