--- a/package.json
+++ b/package.json
@@ -4,14 +4,23 @@
   "version": "0.0.3",
   "description": "The best modular GUI to run AI diffusion models.",
   "main": ".vite/build/main.js",
+  "packageManager": "yarn@4.4.1",
   "scripts": {
-    "start": "electron-forge start",
-    "package": "electron-forge package",
-    "make": "electron-forge make",
-    "publish": "electron-forge publish",
+    "clean": "rimraf .vite dist out",
+    "clean:assets": "rimraf assets/ComfyUI assets/python assets/override.txt assets/python.tgz || rimraf assets/cpython*.tar.gz || rimraf assets/requirements.*",
+    "clean:slate": "yarn run clean && yarn run clean:assets && rimraf node_modules",
     "lint": "eslint --ext .ts,.tsx .",
+    "lint:fix": "eslint --fix --ext .ts,.tsx .",
+    "make": "electron-forge make",
+    "make:assets:amd": "cd assets && comfy-cli --skip-prompt --here install --fast-deps --amd && comfy-cli --here standalone",
+    "make:assets:cpu": "cd assets && comfy-cli --skip-prompt --here install --fast-deps --cpu && comfy-cli --here standalone",
+    "make:assets:nvidia": "cd assets && comfy-cli --skip-prompt --here install --fast-deps --nvidia && comfy-cli --here standalone",
     "notarize": "node debug/notarize.js",
-    "sign": "node debug/sign.js"
+    "package": "electron-forge package",
+    "publish": "electron-forge publish",
+    "sign": "node debug/sign.js",
+    "start": "electron-forge start",
+    "typescript": "yarn run tsc"
   },
   "devDependencies": {
     "@electron-forge/cli": "^7.4.0",
@@ -28,15 +37,18 @@
     "@electron/windows-sign": "^1.1.3",
     "@types/adm-zip": "^0.5.5",
     "@types/electron-squirrel-startup": "^1.0.2",
+    "@types/node": "^22.5.0",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
+    "@types/tar": "6.1.13",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "electron": "31.3.1",
     "eslint": "^8.0.1",
     "eslint-plugin-import": "^2.25.0",
+    "rimraf": "^6.0.1",
     "ts-node": "^10.0.0",
-    "typescript": "~4.5.4",
+    "typescript": "~5.5.4",
     "vite": "^5.0.12"
   },
   "keywords": [],
@@ -44,12 +56,13 @@
     "name": "Robin Huang",
     "email": "robin@drip.art"
   },
-  "license": "GPL",
+  "license": "GPL-3.0-only",
   "dependencies": {
     "adm-zip": "^0.5.15",
     "axios": "^1.7.3",
     "electron-squirrel-startup": "^1.0.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "tar": "^7.4.3"
   }
 }
