Use yarn install.

--- a/.github/workflows/publish_macos.yml
+++ b/.github/workflows/publish_macos.yml
@@ -10,11 +10,12 @@ jobs:
     steps:
       - name: Github checkout
         uses: actions/checkout@v4
-      - name: Use Node.js
-        uses: actions/setup-node@v4
+      - name: Use Node.js 20.x
+        uses: JP250552/setup-node@feature/corepack
         with:
-          node-version: 20
-      - run: npm i
+          node-version: "22.x"
+          corepack: true  
+      - run: yarn install --verbose
       - name: Set Up signing
         uses: ./.github/actions/build/macos/signing
         with:
