Add prettier formatter to CI (#22)
* Add yarn ci action.

* Ignore.

* Fix type.

* Ignore debug build on certain paths.

* Lint all files.,

* Only do formatter.

* Use corepack.

* Frozen lockfile.

* Update lockfile.

* Immutable.

* Update.

* Update lockfile.

* Plain install.

* Remove.

* Rebase.

* Ignore scripts.

* Ignore scripts.

* Update yarn.

* Update lockfile.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "clean:slate": "yarn run clean && yarn run clean:assets && rimraf node_modules",
     "lint": "eslint --ext .ts,.tsx .",
     "lint:fix": "eslint --fix --ext .ts,.tsx .",
+    "format": "prettier --check .",
+    "format:fix": "prettier --write .",
     "make": "electron-forge make",
     "make:assets:amd": "cd assets && comfy-cli --skip-prompt --here install --fast-deps --amd --manager-url https://github.com/Comfy-Org/manager-core && comfy-cli --here standalone",
     "make:assets:cpu": "cd assets && comfy-cli --skip-prompt --here install --fast-deps --cpu --manager-url https://github.com/Comfy-Org/manager-core && comfy-cli --here standalone && node ../scripts/env.mjs",
@@ -49,6 +51,7 @@
     "electron": "31.3.1",
     "eslint": "^8.0.1",
     "eslint-plugin-import": "^2.25.0",
+    "prettier": "^3.3.3",
     "rimraf": "^6.0.1",
     "ts-node": "^10.0.0",
     "typescript": "~5.5.4",
