--- a/.github/workflows/debug_windows.yml
+++ b/.github/workflows/debug_windows.yml
@@ -6,6 +6,12 @@ on:
   pull_request:
     branches:
       - main
+    paths-ignore:
+      - '.github/**'
+      - '.prettierrc'
+      - '.eslintrc.json'
+      - '.prettierignore'
+      - 'package.json'
 
 jobs:
   build-windows-debug:
