use pytorch+nvidia in production build (#25)
* add "build-gpu" arg to linux/windows github build actions

* add build-gpu arg to Build step in debug/publish build for linux/windows

* fix prettier line length => 120

--- a/.github/workflows/debug_windows.yml
+++ b/.github/workflows/debug_windows.yml
@@ -26,6 +26,7 @@ jobs:
       - name: Build
         uses: ./.github/actions/build/windows/app
         with:
+          build-gpu: 'cpu'
           build-targets: '--targets=@electron-forge/maker-zip'
           sign-and-publish: false
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
