--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "comfyui-electron",
   "productName": "ComfyUI",
   "repository": "github:comfy-org/electron",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "The best modular GUI to run AI diffusion models.",
   "main": ".vite/build/main.js",
   "packageManager": "yarn@4.5.0",
@@ -70,6 +70,7 @@
     "adm-zip": "^0.5.15",
     "axios": "^1.7.3",
     "dotenv": "^16.4.5",
+    "electron-log": "^5.2.0",
     "electron-squirrel-startup": "^1.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
