--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "main": ".vite/build/main.js",
   "packageManager": "yarn@4.5.0",
   "scripts": {
+    "test:unit": "jest --config jest.config.js",
+    "test:e2e": "npx playwright test",
     "clean": "rimraf .vite dist out",
     "clean:assets": "rimraf assets/.env assets/ComfyUI assets/python.tgz & yarn run clean:assets:dev",
     "clean:assets:dev": "rimraf assets/python assets/override.txt & rimraf assets/cpython*.tar.gz & rimraf assets/requirements.*",
@@ -43,9 +45,11 @@
     "@electron/fuses": "^1.8.0",
     "@electron/notarize": "^2.4.0",
     "@electron/windows-sign": "^1.1.3",
+    "@playwright/test": "^1.47.2",
     "@sentry/wizard": "^3.30.0",
     "@types/adm-zip": "^0.5.5",
     "@types/electron-squirrel-startup": "^1.0.2",
+    "@types/jest": "^29.5.13",
     "@types/node": "^22.5.0",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
@@ -57,6 +61,7 @@
     "eslint-plugin-import": "^2.25.0",
     "prettier": "^3.3.3",
     "rimraf": "^6.0.1",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.0.0",
     "typescript": "~5.5.4",
     "vite": "^5.0.12"
@@ -74,6 +79,7 @@
     "dotenv": "^16.4.5",
     "electron-log": "^5.2.0",
     "electron-squirrel-startup": "^1.0.1",
+    "jest": "^29.7.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tar": "^7.4.3",
