--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "comfyui-electron",
   "productName": "ComfyUI",
   "repository": "github:comfy-org/electron",
+  "copyright": "Copyright © 2024 Comfy Org",
   "version": "0.1.21",
   "description": "The best modular GUI to run AI diffusion models.",
   "main": ".vite/build/main.js",
