--- a/config/model_paths_windows.yaml
+++ b/config/model_paths_windows.yaml
@@ -1,6 +1,6 @@
 # ComfyUI extra_model_paths.yaml for Windows
 comfyui:
-  base_path: '%USERPROFILE%/ComfyUI'
+  base_path: '%USERPROFILE%/comfyui-electron'
   is_default: true
   checkpoints: models/checkpoints/
   classifiers: models/classifiers/
