Package DMG for mac. (#76)
* Package DMG for mac.

* Disable test.

* Add passing test.

* Prettier.

* Debug mac.

* Use yarn instead of npm.

* v0.1.25

--- a/.github/workflows/debug_macos.yml
+++ b/.github/workflows/debug_macos.yml
@@ -3,6 +3,15 @@ name: Build App Macos Debug
 on:
   workflow_dispatch:
   workflow_call:
+  pull_request:
+    branches:
+      - main
+    paths-ignore:
+      - '.github/**'
+      - '.prettierrc'
+      - '.eslintrc.json'
+      - '.prettierignore'
+      - 'package.json'
 
 jobs:
   build-macos-debug:
@@ -14,11 +23,12 @@ jobs:
         run: |
           echo "sha_short=$(git rev-parse --short "$GITHUB_SHA")" >> "$GITHUB_ENV"
         shell: bash
-      - name: Use Node.js
-        uses: actions/setup-node@v4
+      - name: Use Node.js 22.x
+        uses: JP250552/setup-node@feature/corepack
         with:
-          node-version: 20
-      - run: npm i
+          node-version: '22.x'
+          corepack: true
+      - run: yarn install
       - name: Build Comfy
         uses: ./.github/actions/build/macos/comfy
       - name: Publish app
@@ -30,4 +40,6 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: comfyui-electron-debug-macos-${{env.sha_short}}
-          path: out/make/zip/darwin/arm64/*.zip
+          path: |
+            out/make/*.dmg
+            out/make/ComfyUI.app
