--- a/.github/workflows/publish_macos.yml
+++ b/.github/workflows/publish_macos.yml
@@ -20,12 +20,15 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-west-2 # Where the S3 bucket lives
-      - name: Use Node.js 20.x
+      - name: Use Node.js 22.x
         uses: JP250552/setup-node@feature/corepack
         with:
           node-version: '22.x'
           corepack: true
       - run: yarn install
+      - name: Get package version
+        id: package-version
+        run: echo "::set-output name=version::$(node -p "require('./package.json').version")"
       - name: Set Up signing
         uses: ./.github/actions/build/macos/signing
         with:
@@ -55,4 +58,6 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: comfyui-electron-signed-macos
-          path: out/make/zip/darwin/arm64/*.zip
+          path: |
+            out/make/*.dmg
+            out/make/ComfyUI.app
