Choose install location. (#81)
* Set up.

* Add yaml.

* App local directory.

* v0.1.26

* Remove model config files.

* Notify when first time setup is complete.

* Format.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "productName": "ComfyUI",
   "repository": "github:comfy-org/electron",
   "copyright": "Copyright © 2024 Comfy Org",
-  "version": "0.1.25",
+  "version": "0.1.26",
   "description": "The best modular GUI to run AI diffusion models.",
   "main": ".vite/build/main.js",
   "packageManager": "yarn@4.5.0",
@@ -87,6 +87,7 @@
     "react-dom": "^18.3.1",
     "systeminformation": "^5.23.5",
     "tar": "^7.4.3",
-    "update-electron-app": "^3.0.0"
+    "update-electron-app": "^3.0.0",
+    "yaml": "^2.6.0"
   }
 }
