Change startup shortcut location.

--- a/package.json
+++ b/package.json
@@ -69,8 +69,8 @@
   },
   "keywords": [],
   "author": {
-    "name": "Robin Huang",
-    "email": "robin@drip.art"
+    "name": "Comfy Org",
+    "email": "support@comfy.org"
   },
   "license": "GPL-3.0-only",
   "dependencies": {
