Generate playwright snapshots (#61)
* Fix update snapshot.

* fix.

* Update.

* Update.

* Increase timeout.

* Disable to test.

* Update checkout.

* Continue on error.

* update.

* Fail-fast = false.

* Increase timeout by a lot.

* node v22

* Try ubuntu.

* update.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "test:unit": "jest --config jest.config.js",
     "test:e2e": "npx playwright test",
+    "test:update-snapshots": "npx playwright test --update-snapshots",
     "clean": "rimraf .vite dist out",
     "clean:assets": "rimraf assets/.env assets/ComfyUI assets/python.tgz & yarn run clean:assets:dev",
     "clean:assets:dev": "rimraf assets/python assets/override.txt & rimraf assets/cpython*.tar.gz & rimraf assets/requirements.*",
