--- a/.github/workflows/todesktop.yml
+++ b/.github/workflows/todesktop.yml
@@ -1,18 +1,25 @@
-name: Publish All Platforms
+name: Build App And Send ToDesktop (TEMP)
 
 on:
   workflow_dispatch:
+  workflow_call:
 
 jobs:
-  build-stage-to-todesktop:
+  build-windows-debug:
     runs-on: windows-latest
     steps:
       - name: Github checkout
         uses: actions/checkout@v4
+      - name: Declare some variables
+        run: |
+          echo "sha_short=$(git rev-parse --short "$GITHUB_SHA")" >> "$GITHUB_ENV"
+        shell: bash
       - name: Build
         uses: ./.github/actions/build/windows/todesktop
         with:
-          sign-and-publish: true
+          build-gpu: 'cpu'
+          build-targets: '--targets=@electron-forge/maker-zip'
+          sign-and-publish: false
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
           TODESKTOP_ACCESS_TOKEN: ${{secrets.TODESKTOP_ACCESS_TOKEN}}
           TODESKTOP_EMAIL: ${{secrets.TODESKTOP_EMAIL}}
