--- a/.github/workflows/debug_windows.yml
+++ b/.github/workflows/debug_windows.yml
@@ -27,11 +27,10 @@ jobs:
         uses: ./.github/actions/build/windows/app
         with:
           build-gpu: 'cpu'
-          build-targets: '--targets=@electron-forge/maker-zip'
           sign-and-publish: false
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
       - name: Upload Build
         uses: actions/upload-artifact@v4
         with:
-          name: comfyui-electron-debug-win32-${{env.sha_short}}
-          path: out/make/zip/win32/x64/*.zip
+          name: comfyui-electron-win32-debug-build-${{env.sha_short}}
+          path: dist/*.zip
