--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "productName": "ComfyUI",
   "repository": "github:comfy-org/electron",
   "copyright": "Copyright © 2024 Comfy Org",
-  "version": "0.1.39",
+  "version": "0.2.7",
+  "homepage": "https://comfy.org",
   "description": "The best modular GUI to run AI diffusion models.",
   "main": ".vite/build/main.js",
   "packageManager": "yarn@4.5.0",
@@ -19,36 +20,29 @@
     "lint:fix": "eslint --fix --ext .ts,.tsx .",
     "format": "prettier --check .",
     "format:fix": "prettier --write .",
-    "make": "electron-forge make",
+    "make": "yarn run vite:compile && electron-builder build --config=builder-debug.config.ts",
     "make:assets:amd": "cd assets && comfy-cli --skip-prompt --here install --fast-deps --amd --manager-url https://github.com/Comfy-Org/manager-core && comfy-cli --here standalone && mkdir -p ComfyUI/user/default",
     "make:assets:cpu": "cd assets && comfy-cli --skip-prompt --here install --fast-deps --cpu --manager-url https://github.com/Comfy-Org/manager-core && comfy-cli --here standalone && node ../scripts/env.mjs && mkdir -p ComfyUI/user/default",
     "make:assets:nvidia": "cd assets && comfy-cli --skip-prompt --here install --fast-deps --nvidia --manager-url https://github.com/Comfy-Org/manager-core && comfy-cli --here standalone && mkdir -p ComfyUI/user/default",
     "make:assets:macos": "cd assets && comfy-cli --skip-prompt --here install --fast-deps --m-series --manager-url https://github.com/Comfy-Org/manager-core && comfy-cli --here standalone && mkdir -p ComfyUI/user/default",
+    "vite:compile": "vite build --config vite.renderer.config.ts && vite build --config vite.main.config.ts && vite build --config vite.preload.config.ts ",
     "notarize": "node debug/notarize.js",
-    "package": "electron-forge package",
-    "publish": "electron-forge publish",
+    "package": "yarn run vite:compile && todesktop build --code-sign=false --async",
+    "publish": "yarn run vite:compile && todesktop build --async",
     "sign": "node debug/sign.js",
-    "start": "electron-forge start",
-    "typescript": "yarn run tsc"
+    "start": "node ./scripts/launchdev.js",
+    "typescript": "yarn run tsc",
+    "todesktop:beforeInstall": "./scripts/todesktop/beforeInstall.js",
+    "postinstall": "node ./scripts/todesktop/postInstall.js",
+    "todesktop:afterPack": "./scripts/todesktop/afterPack.js"
   },
   "devDependencies": {
-    "@electron-forge/cli": "^7.4.0",
-    "@electron-forge/maker-deb": "^7.4.0",
-    "@electron-forge/maker-dmg": "^7.4.0",
-    "@electron-forge/maker-rpm": "^7.4.0",
-    "@electron-forge/maker-squirrel": "^7.4.0",
-    "@electron-forge/maker-zip": "^7.4.0",
-    "@electron-forge/plugin-auto-unpack-natives": "^7.4.0",
-    "@electron-forge/plugin-fuses": "^7.4.0",
-    "@electron-forge/plugin-vite": "^7.4.0",
-    "@electron-forge/publisher-gcs": "^7.4.0",
-    "@electron-forge/publisher-github": "^7.4.0",
-    "@electron-forge/publisher-s3": "^7.4.0",
     "@electron/fuses": "^1.8.0",
     "@electron/notarize": "^2.4.0",
     "@electron/windows-sign": "^1.1.3",
     "@playwright/test": "^1.47.2",
     "@sentry/wizard": "^3.30.0",
+    "@todesktop/cli": "^1.9.6",
     "@types/adm-zip": "^0.5.5",
     "@types/electron-squirrel-startup": "^1.0.2",
     "@types/jest": "^29.5.13",
@@ -60,6 +54,7 @@
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "electron": "31.3.1",
+    "electron-builder": "^25.1.8",
     "eslint": "^8.0.1",
     "eslint-plugin-import": "^2.25.0",
     "prettier": "^3.3.3",
@@ -79,11 +74,11 @@
     "@melloware/react-logviewer": "^5.2.3",
     "@sentry/electron": "^5.4.0",
     "@sentry/vite-plugin": "^2.22.4",
+    "@todesktop/runtime": "^1.6.4",
     "adm-zip": "^0.5.15",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "electron-log": "^5.2.0",
-    "electron-squirrel-startup": "^1.0.1",
     "electron-store": "8.2.0",
     "jest": "^29.7.0",
     "react": "^18.3.1",
