--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "format:fix": "prettier --write .",
     "prepare": "husky",
     "make": "yarn run vite:compile && electron-builder build --config=builder-debug.config.ts",
+    "make:nvidia": "yarn run make -- --nvidia",
     "make:assets:amd": "cd assets && comfy-cli --skip-prompt --here install --fast-deps --amd --manager-url https://github.com/Comfy-Org/manager-core && comfy-cli --here standalone && yarn run clone-settings-extension && yarn run clean:git",
     "make:assets:cpu": "cd assets && comfy-cli --skip-prompt --here install --fast-deps --cpu --manager-url https://github.com/Comfy-Org/manager-core && comfy-cli --here standalone && node ../scripts/env.mjs && yarn run clone-settings-extension && yarn run clean:git",
     "make:assets:nvidia": "cd assets && comfy-cli --skip-prompt --here install --fast-deps --nvidia --manager-url https://github.com/Comfy-Org/manager-core && comfy-cli --here standalone && yarn run clone-settings-extension && yarn run clean:git",
