Remove unused dependencies. (#170)
* Local todesktop publish.

* Remove unused packages: ws and update-electron.

* update yarn lock.

* update.

* test

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "test:update-snapshots": "npx playwright test --update-snapshots",
     "todesktop:afterPack": "./scripts/todesktop/afterPack.js",
     "todesktop:beforeInstall": "./scripts/todesktop/beforeInstall.js",
+    "todesktop:postInstall": "./scripts/todesktop/postInstall.js",
     "typescript": "yarn run tsc",
     "vite:compile": "vite build --config vite.renderer.config.ts && vite build --config vite.main.config.ts && vite build --config vite.preload.config.ts"
   },
@@ -54,7 +55,6 @@
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
     "@types/tar": "6.1.13",
-    "@types/ws": "^8.5.12",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "electron": "31.3.1",
@@ -90,8 +90,6 @@
     "react-dom": "^18.3.1",
     "systeminformation": "^5.23.5",
     "tar": "^7.4.3",
-    "update-electron-app": "^3.0.0",
-    "ws": "^8.18.0",
     "yaml": "^2.6.0"
   },
   "lint-staged": {
