Build types for ElectronAPI (#203)
* Add vite-dts

* Build types for ElectronAPI

* prefix @comfyorg on package name

* Add publish config

* Regen lock

* Add prepare types script

* nit

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "comfyui-electron",
+  "name": "@comfyorg/comfyui-electron",
   "productName": "ComfyUI",
   "repository": "github:comfy-org/electron",
   "copyright": "Copyright © 2024 Comfy Org",
@@ -44,7 +44,8 @@
     "todesktop:afterPack": "./scripts/todesktop/afterPack.js",
     "todesktop:beforeInstall": "./scripts/todesktop/beforeInstall.js",
     "typescript": "yarn run tsc",
-    "vite:compile": "vite build --config vite.renderer.config.ts && vite build --config vite.main.config.ts && vite build --config vite.preload.config.ts"
+    "vite:compile": "vite build --config vite.renderer.config.ts && vite build --config vite.main.config.ts && vite build --config vite.preload.config.ts",
+    "vite:types": "vite build --config vite.types.config.ts && node scripts/prepareTypes.js"
   },
   "devDependencies": {
     "@electron/fuses": "^1.8.0",
@@ -73,7 +74,8 @@
     "ts-jest": "^29.2.5",
     "ts-node": "^10.0.0",
     "typescript": "~5.5.4",
-    "vite": "^5.0.12"
+    "vite": "^5.0.12",
+    "vite-plugin-dts": "^4.3.0"
   },
   "keywords": [],
   "author": {
