Refactor BrowserWindow into AppWindow (#207)
* Refactor browser window into AppWindow.

* Refactor.

* Check renderer status.

* Refactor.

* Remove null checks.

* Use personal access token.

* Rename mainWindow -> appWindow.

* Update.

--- a/.github/workflows/debug_macos.yml
+++ b/.github/workflows/debug_macos.yml
@@ -31,6 +31,9 @@ jobs:
       - run: yarn install
       - name: Build Comfy
         uses: ./.github/actions/build/macos/comfy
+        env:
+          GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN_FOR_GITHUB }}
+
       - name: Make app
         env:
           PUBLISH: false
