Fix yarn in npm release script (#220)
* Fix yarn in npm release script

* nit

--- a/.github/workflows/release_types.yml
+++ b/.github/workflows/release_types.yml
@@ -16,13 +16,17 @@ jobs:
       contains(github.event.pull_request.labels.*.name, 'ReleaseTypes')
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v3
+      - name: Use Node.js 20.x
+        uses: JP250552/setup-node@feature/corepack
         with:
-          node-version: lts/*
-          registry-url: 'https://registry.npmjs.org'
-      - run: yarn install
-      - run: yarn run vite:types
-      - run: yarn install && yarn npm publish --access public
+          node-version: '20.x'
+          corepack: true
+      - name: Install dependencies
+        run: yarn install
+      - name: Build types
+        run: yarn run vite:types
+      - name: Publish package
+        run: yarn install && yarn npm publish --access public
         working-directory: ./dist
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
