--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "productName": "ComfyUI",
   "repository": "github:comfy-org/electron",
   "copyright": "Copyright © 2024 Comfy Org",
-  "version": "0.2.17",
+  "version": "0.3.0",
   "homepage": "https://comfy.org",
   "description": "The best modular GUI to run AI diffusion models.",
   "main": ".vite/build/main.js",
@@ -11,15 +11,18 @@
   "config": {
     "frontendVersion": "1.3.43",
     "comfyVersion": "0.2.7",
-    "managerCommit": "e629215c100c89a9a9d33fc03be3248069ff67ef"
+    "managerCommit": "e629215c100c89a9a9d33fc03be3248069ff67ef",
+    "uvVersion": "0.5.1"
   },
   "scripts": {
     "clean": "rimraf .vite dist out",
+    "clean:uv": "rimraf assets/uv",
     "clean:assets": "rimraf assets/.env assets/ComfyUI assets/python.tgz & yarn run clean:assets:dev",
     "clean:assets:dev": "yarn run clean:assets:git && rimraf assets/python assets/override.txt & rimraf assets/cpython*.tar.gz & rimraf assets/requirements.*",
     "clean:assets:git": "rimraf assets/ComfyUI/.git assets/ComfyUI/custom_nodes/ComfyUI_Manager/.git assets/ComfyUI/custom_nodes/DesktopSettingsExtension/.git",
     "clean:slate": "yarn run clean & yarn run clean:assets & rimraf node_modules",
     "clone-settings-extension": "git clone https://github.com/Comfy-Org/DesktopSettingsExtension.git assets/ComfyUI/custom_nodes/DesktopSettingsExtension",
+    "download:uv": "node scripts/downloadUV.js",
     "download-frontend": "node scripts/downloadFrontend.js",
     "make:frontend": "yarn run download-frontend && yarn run clone-settings-extension",
     "format": "prettier --check .",
