Add ESLint & Update tooling (#536)
* Add ESLint & Unicorn

* Update TypeScript

* Update vite

* Fix build process not type-checked

* Update project to lint all files

* Update tsconfig to match project use

- Removes unnecessary jsx setting
- Fix deprectated moduleResolution marker

* Improve legibility of dense JSON files

* Fix yarn start never stops

* Allow JS scripts to be formatted

* nit

* Apply auto-fixes

* Convert preMake to named export

* Apply auto-fixes

* Add top-level awaits to ESM scripts

* Add types

* Format launchdev.js

* Remove workaround, clean up

* Revert "Allow JS scripts to be formatted"

This reverts commit 21cecd7e6e567275a44c8eb7b78227cc6d52e876.

* Update test expectations

* nit

* Fix tests not linted

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "compilerOptions": {
-    "jsx": "react",
+    "noEmit": true,
+
+    // TODO: Pin to ES2024 when this is resolved: https://github.com/evanw/esbuild/pull/3990
     "target": "ESNext",
     "module": "ESNext",
     "allowJs": true,
@@ -11,12 +13,13 @@
     "sourceMap": true,
     "baseUrl": ".",
     "outDir": "dist",
-    "moduleResolution": "node",
+    "moduleResolution": "node10",
     "resolveJsonModule": true,
     "paths": {
       "/*": ["./*"]
     }
   },
   "exclude": [".history", ".vite", "assets", "dist", "node_modules", "out"],
-  "include": ["src/**/*", "forge.env.d.ts", "global.d.ts"]
+  // Include JS files so they are covered by projectService (ESLint)
+  "include": ["src/**/*", "*.ts", "*.js", "scripts/**/*", "tests/**/*"]
 }
