--- a/package.json
+++ b/package.json
@@ -47,9 +47,9 @@
     "test:update-snapshots": "npx playwright test --update-snapshots",
     "todesktop:afterPack": "./scripts/todesktop/afterPack.cjs",
     "todesktop:beforeInstall": "./scripts/todesktop/beforeInstall.cjs",
-    "typescript": "yarn run tsc",
-    "vite:compile": "vite build --config vite.main.config.ts && vite build --config vite.preload.config.ts",
-    "vite:types": "vite build --config vite.types.config.ts && node scripts/prepareTypes.js",
+    "typescript": "tsc -p tsconfig.build.json",
+    "vite:compile": "yarn run typescript && vite build --config vite.main.config.ts && vite build --config vite.preload.config.ts",
+    "vite:types": "yarn run typescript && vite build --config vite.types.config.ts && node scripts/prepareTypes.js",
     "release:types": "node scripts/releaseTypes.js",
     "update:frontend": "node scripts/updateFrontend.js"
   },
@@ -58,11 +58,13 @@
     "@electron/notarize": "^2.4.0",
     "@electron/rebuild": "^3.7.1",
     "@electron/windows-sign": "^1.1.3",
+    "@eslint/js": "^9.17.0",
     "@playwright/test": "^1.47.2",
     "@sentry/wizard": "^3.30.0",
     "@todesktop/cli": "^1.9.7",
     "@types/adm-zip": "^0.5.5",
     "@types/electron-squirrel-startup": "^1.0.2",
+    "@types/eslint__js": "^8.42.3",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.2",
     "@types/tar": "6.1.13",
@@ -71,8 +73,10 @@
     "@typescript-eslint/parser": "^5.0.0",
     "electron": "31.3.1",
     "electron-builder": "^25.1.8",
-    "eslint": "^8.0.1",
+    "eslint": "^9.17.0",
     "eslint-plugin-import": "^2.25.0",
+    "eslint-plugin-unicorn": "^56.0.1",
+    "globals": "^15.13.0",
     "husky": "^9.1.6",
     "jest": "^29.7.0",
     "lint-staged": "^15.2.10",
@@ -80,8 +84,9 @@
     "rimraf": "^6.0.1",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.0.0",
-    "typescript": "~5.5.4",
-    "vite": "^5.0.12",
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.18.1",
+    "vite": "^6.0.3",
     "vite-plugin-dts": "^4.3.0"
   },
   "keywords": [],
