Add vitest & cross-platform test support (#540)
* Replace jest with vitest - packages

* Add vitest config

* Add vitest run script

* Convert tests: vitest + cross-platform

* Use temp dir for test temp files

* Use vitest workspace to explicitly define tests

Simplifies test run commands - no need to know the configs.

* nit - Doc [skip ci]

---------

Co-authored-by: Chenlei Hu <hcl@comfy.org>

--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "sign": "node debug/sign.js",
     "start": "node ./scripts/launchdev.js",
     "test:e2e": "npx playwright test",
-    "test:unit": "jest --config jest.config.cjs",
+    "test:unit": "vitest run",
     "test:update-snapshots": "npx playwright test --update-snapshots",
     "todesktop:afterPack": "./scripts/todesktop/afterPack.cjs",
     "todesktop:beforeInstall": "./scripts/todesktop/beforeInstall.cjs",
@@ -65,7 +65,6 @@
     "@types/adm-zip": "^0.5.5",
     "@types/electron-squirrel-startup": "^1.0.2",
     "@types/eslint__js": "^8.42.3",
-    "@types/jest": "^29.5.14",
     "@types/node": "^22.10.2",
     "@types/tar": "6.1.13",
     "@types/tmp": "^0.2.6",
@@ -79,16 +78,15 @@
     "eslint-plugin-unicorn": "^56.0.1",
     "globals": "^15.13.0",
     "husky": "^9.1.6",
-    "jest": "^29.7.0",
     "lint-staged": "^15.2.10",
     "prettier": "^3.3.3",
     "rimraf": "^6.0.1",
-    "ts-jest": "^29.2.5",
     "ts-node": "^10.0.0",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.18.1",
     "vite": "^6.0.3",
-    "vite-plugin-dts": "^4.3.0"
+    "vite-plugin-dts": "^4.3.0",
+    "vitest": "2.1.6"
   },
   "keywords": [],
   "author": {
