[Test] Add vadlidateHardware unit tests (#678)
* Add hardware validation unit test

* Rename to match associated module/export

* Remove old playwright workaround

* Add SKIP_GPU_VALIDATION envvar

* SKIP_GPU_VALIDATION -> SKIP_HARDWARE_VALIDATION

* Add print to playwright global setup

* revert scope change

* Restore previous

* Restore previous

* Remove debug prints

--- a/.github/workflows/integration_test_windows.yml
+++ b/.github/workflows/integration_test_windows.yml
@@ -29,6 +29,8 @@ on:
 jobs:
   integration-windows-test:
     runs-on: windows-latest
+    env:
+      SKIP_HARDWARE_VALIDATION: 'true'
     steps:
       - name: Github checkout
         uses: actions/checkout@v4
